unpackaged/main/default/objects/Asset_Builder_Report_Data__c/Asset_Builder_Report_Data__c.object-meta.xml
<CustomObject>
    <label>Completeness Report Data</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Asset Builder Report Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completeness Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>