unpackaged/main/default/objects/Asset_Builder_Report_Data__c/fields/Base_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset Template</label>
    <referenceTo>Base_Asset_Template__c</referenceTo>
    <relationshipLabel>Asset Builder Report Data</relationshipLabel>
    <relationshipName>Completeness_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>