unpackaged/main/default/objects/Asset_Builder_Report_Data__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archived?</label>
    <type>Checkbox</type>
</CustomField>