unpackaged/main/default/objects/Asset_Builder_Report_Data__c/fields/Prompt_Information__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Information</label>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Completeness Report Data</relationshipLabel>
    <relationshipName>Asset_Builder_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>