unpackaged/main/default/objects/Asset_Builder_Report_Data__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>