unpackaged/main/default/objects/Asset_Builder_Report_Data__c/fields/Total_Attribute_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Attribute_Count__c</fullName>
    <label>Total Attribute Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>