unpackaged/main/default/objects/Asset_Builder_Report_Data__c/fields/Total_Completed_Attribute_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Attribute_Count__c</fullName>
    <label>Total Count of Completed Attribute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>